--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--6331032\testng-customsuite.xml</span>
+                    <span>C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--1947588250\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -231,7 +231,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--6331032\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--1947588250\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -282,46 +282,46 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(9);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ValidateRegPage')
+data.setCell(0, 1, 'ValidateLogin')
 data.setCell(0, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(0, 3, 155864);
+data.setCell(0, 3, 52818);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ValidateLogin')
+data.setCell(1, 1, 'ValidateRegPage')
 data.setCell(1, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(1, 3, 90621);
+data.setCell(1, 3, 12328);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'ValidateNotificationPage')
 data.setCell(2, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(2, 3, 29224);
+data.setCell(2, 3, 11094);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'ValidateManageTab')
+data.setCell(3, 1, 'ValidateInsightTab')
 data.setCell(3, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(3, 3, 19675);
+data.setCell(3, 3, 10830);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'ValidateForgetPswd')
+data.setCell(4, 1, 'ValidateManageTab')
 data.setCell(4, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(4, 3, 9325);
+data.setCell(4, 3, 9047);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'ValidateMarkITPlacePage')
+data.setCell(5, 1, 'ValidateForgetPswd')
 data.setCell(5, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(5, 3, 2539);
+data.setCell(5, 3, 6414);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'ValidateLogo')
 data.setCell(6, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(6, 3, 1280);
+data.setCell(6, 3, 1601);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'ValidateInsightTab')
+data.setCell(7, 1, 'ValidateMarkITPlacePage')
 data.setCell(7, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(7, 3, 1153);
+data.setCell(7, 3, 1461);
 data.setCell(8, 0, 8)
 data.setCell(8, 1, 'ValidateLogout')
 data.setCell(8, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(8, 3, 1040);
+data.setCell(8, 3, 941);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -354,39 +354,39 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateMarkITPlacePage</span>
-                <span class="method-start">90621 ms</span>
+                <span class="method-start">52818 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateManageTab</span>
-                <span class="method-start">93161 ms</span>
+                <span class="method-start">54283 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateInsightTab</span>
-                <span class="method-start">112856 ms</span>
+                <span class="method-start">63330 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateNotificationPage</span>
-                <span class="method-start">114011 ms</span>
+                <span class="method-start">74163 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateLogo</span>
-                <span class="method-start">143235 ms</span>
+                <span class="method-start">85257 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateLogout</span>
-                <span class="method-start">144518 ms</span>
+                <span class="method-start">86866 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateForgetPswd</span>
-                <span class="method-start">145560 ms</span>
+                <span class="method-start">87813 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateRegPage</span>
-                <span class="method-start">154886 ms</span>
+                <span class="method-start">94228 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closebrowser</span>
-                <span class="method-start">310752 ms</span>
+                <span class="method-start">106559 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
