--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateRegPage</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateForgetPswd</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateLogout</td></tr>
 </table>
