--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,5 +1,4 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>smokeTest.ValidateSmokeTest.ValidateRegPage</td></tr>
-<tr><td>smokeTest.ValidateSmokeTest.ValidateForgetPswd</td></tr>
-<tr><td>smokeTest.ValidateSmokeTest.ValidateLogout</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateLoginUser</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateMyAccountList</td></tr>
 </table>
