--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\bilaw\AppData\Local\Temp\testng-eclipse-1058942419\testng-customsuite.xml</span>
+                    <span>C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--1680832504\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">20 methods,   20 passed</span>
+                    <span class="method-stats">19 methods,   19 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -188,11 +188,6 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="smokeTest.ValidateSmokeTest" hash-for-method="ValidateRequestTab">ValidateRequestTab</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="smokeTest.ValidateSmokeTest" hash-for-method="ValidateSetNotifications">ValidateSetNotifications</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -346,13 +341,6 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ValidateSetNotifications">
-                  </a> <!-- ValidateSetNotifications -->
-                  <span class="method-name">ValidateSetNotifications</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="ValidateUsersPage">
                   </a> <!-- ValidateUsersPage -->
                   <span class="method-name">ValidateUsersPage</span>
@@ -363,7 +351,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bilaw\AppData\Local\Temp\testng-eclipse-1058942419\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--1680832504\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -412,87 +400,83 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(20);
+data.addRows(19);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'ValidateLogin')
 data.setCell(0, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(0, 3, 45599);
+data.setCell(0, 3, 43038);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ValidateNotificationPage')
+data.setCell(1, 1, 'ValidateAddressPage')
 data.setCell(1, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(1, 3, 44632);
+data.setCell(1, 3, 28495);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'ValidateUsersPage')
 data.setCell(2, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(2, 3, 24758);
+data.setCell(2, 3, 22442);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'ValidateAddressPage')
+data.setCell(3, 1, 'ValidateMyProfile')
 data.setCell(3, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(3, 3, 21677);
+data.setCell(3, 3, 22071);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'ValidateChangePassword')
+data.setCell(4, 1, 'ValidateEditProfile')
 data.setCell(4, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(4, 3, 18653);
+data.setCell(4, 3, 21828);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'ValidateMyProfile')
+data.setCell(5, 1, 'ValidateChangePassword')
 data.setCell(5, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(5, 3, 16798);
+data.setCell(5, 3, 21561);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'ValidateRegPage')
+data.setCell(6, 1, 'ValidateDomainLink')
 data.setCell(6, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(6, 3, 15020);
+data.setCell(6, 3, 18778);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'ValidateManageTab')
+data.setCell(7, 1, 'ValidateRegPage')
 data.setCell(7, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(7, 3, 14829);
+data.setCell(7, 3, 16744);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'ValidateEditProfile')
+data.setCell(8, 1, 'ValidateNotificationPage')
 data.setCell(8, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(8, 3, 14045);
+data.setCell(8, 3, 16257);
 data.setCell(9, 0, 9)
 data.setCell(9, 1, 'ValidateAccountSettings')
 data.setCell(9, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(9, 3, 11239);
+data.setCell(9, 3, 14702);
 data.setCell(10, 0, 10)
-data.setCell(10, 1, 'ValidateDomainLink')
+data.setCell(10, 1, 'ValidateCatalogRestriction')
 data.setCell(10, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(10, 3, 10873);
+data.setCell(10, 3, 13223);
 data.setCell(11, 0, 11)
-data.setCell(11, 1, 'ValidateForgetPswd')
+data.setCell(11, 1, 'ValidateManageTab')
 data.setCell(11, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(11, 3, 9548);
+data.setCell(11, 3, 9429);
 data.setCell(12, 0, 12)
-data.setCell(12, 1, 'ValidateCatalogRestriction')
+data.setCell(12, 1, 'ValidateForgetPswd')
 data.setCell(12, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(12, 3, 8526);
+data.setCell(12, 3, 9397);
 data.setCell(13, 0, 13)
-data.setCell(13, 1, 'ValidateSetNotifications')
+data.setCell(13, 1, 'ValidateLogout')
 data.setCell(13, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(13, 3, 8429);
+data.setCell(13, 3, 4992);
 data.setCell(14, 0, 14)
-data.setCell(14, 1, 'ValidateLogout')
+data.setCell(14, 1, 'ValidateInsightTab')
 data.setCell(14, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(14, 3, 5026);
+data.setCell(14, 3, 4015);
 data.setCell(15, 0, 15)
-data.setCell(15, 1, 'ValidateInsightTab')
+data.setCell(15, 1, 'ValidateMarkITPlacePage')
 data.setCell(15, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(15, 3, 4057);
+data.setCell(15, 3, 3502);
 data.setCell(16, 0, 16)
 data.setCell(16, 1, 'ValidateLogo')
 data.setCell(16, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(16, 3, 3276);
+data.setCell(16, 3, 3177);
 data.setCell(17, 0, 17)
-data.setCell(17, 1, 'ValidateMarkITPlacePage')
+data.setCell(17, 1, 'ValidateInviteTab')
 data.setCell(17, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(17, 3, 3219);
+data.setCell(17, 3, 2240);
 data.setCell(18, 0, 18)
 data.setCell(18, 1, 'ValidateRequestTab')
 data.setCell(18, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(18, 3, 2256);
-data.setCell(19, 0, 19)
-data.setCell(19, 1, 'ValidateInviteTab')
-data.setCell(19, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(19, 3, 2206);
+data.setCell(18, 3, 2232);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -512,12 +496,14 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">smokeTest.ValidateSmokeTest</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">ValidateSetNotifications</span>
+                <br/>
                 <span class="ignored-method-name">ValidateLoginUser</span>
                 <br/>
                 <span class="ignored-method-name">ValidateMyAccountList</span>
@@ -539,84 +525,76 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateMarkITPlacePage</span>
-                <span class="method-start">45599 ms</span>
+                <span class="method-start">43038 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateManageTab</span>
-                <span class="method-start">48818 ms</span>
+                <span class="method-start">46558 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateInsightTab</span>
-                <span class="method-start">63647 ms</span>
+                <span class="method-start">56007 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateNotificationPage</span>
-                <span class="method-start">67723 ms</span>
+                <span class="method-start">60041 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateLogo</span>
-                <span class="method-start">112355 ms</span>
+                <span class="method-start">76316 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateMyProfile</span>
-                <span class="method-start">115631 ms</span>
+                <span class="method-start">79493 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateEditProfile</span>
-                <span class="method-start">132446 ms</span>
+                <span class="method-start">101564 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateChangePassword</span>
-                <span class="method-start">146491 ms</span>
+                <span class="method-start">123394 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateAccountSettings</span>
-                <span class="method-start">165163 ms</span>
+                <span class="method-start">144955 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateCatalogRestriction</span>
-                <span class="method-start">176402 ms</span>
+                <span class="method-start">159675 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateDomainLink</span>
-                <span class="method-start">184928 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateSetNotifications</span>
-                <span class="method-start">195820 ms</span>
+                <span class="method-start">172898 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateAddressPage</span>
-                <span class="method-start">204264 ms</span>
+                <span class="method-start">191694 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateUsersPage</span>
-                <span class="method-start">225941 ms</span>
+                <span class="method-start">220189 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateRequestTab</span>
-                <span class="method-start">250699 ms</span>
+                <span class="method-start">242631 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateInviteTab</span>
-                <span class="method-start">252955 ms</span>
+                <span class="method-start">244863 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateLogout</span>
-                <span class="method-start">255161 ms</span>
+                <span class="method-start">247103 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateForgetPswd</span>
-                <span class="method-start">260202 ms</span>
+                <span class="method-start">252095 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateRegPage</span>
-                <span class="method-start">269750 ms</span>
+                <span class="method-start">261517 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-test after">
-                <span class="method-name">closebrowser</span>
-                <span class="method-start">284771 ms</span>
-              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
