--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3ddb1">  <td>18/11/19 10:31:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateLogin</td> 
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:36:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAccountSettings()[pri:9, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateAccountSettings</td> 
   <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/19 10:32:07</td>   <td>45143</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTest.ValidateSmokeTest@65466a6a]">&lt;&lt;closebrowser</td> 
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:37:46</td>   <td>48969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAddressPage()[pri:13, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateAddressPage</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:37:20</td>   <td>22282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCatalogRestriction()[pri:10, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateCatalogRestriction</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:36:37</td>   <td>-19931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateChangePassword()[pri:8, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateChangePassword</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:37:33</td>   <td>35385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateDomainLink()[pri:11, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateDomainLink</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:36:23</td>   <td>-34610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateEditProfile()[pri:7, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateEditProfile</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:28:18</td>   <td>-519793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateForgetPswd()[pri:18, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateForgetPswd</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:35:35</td>   <td>-82292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateInsightTab()[pri:3, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateInsightTab</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:27:55</td>   <td>-542142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateInviteTab()[pri:16, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateInviteTab</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:34:30</td>   <td>-147731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateLogin</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:35:58</td>   <td>-59573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogo()[pri:5, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateLogo</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:28:02</td>   <td>-534913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogout()[pri:17, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateLogout</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:35:24</td>   <td>-93667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateManageTab()[pri:2, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateManageTab</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:35:19</td>   <td>-98273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMarkITPlacePage()[pri:1, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateMarkITPlacePage</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:36:01</td>   <td>-56348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfile()[pri:6, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateMyProfile</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:35:39</td>   <td>-78254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateNotificationPage()[pri:4, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateNotificationPage</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:28:37</td>   <td>-500662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRegPage()[pri:19, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateRegPage</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:27:48</td>   <td>-549370</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRequestTab()[pri:15, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateRequestTab</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:38:03</td>   <td>65770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateUsersPage()[pri:14, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateUsersPage</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:28:51</td>   <td>-486488</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTest.ValidateSmokeTest@65466a6a]">&lt;&lt;closebrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1585635178</td>   <td></td> </tr>
 </table>
