--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,42 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:32:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateLogin</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:32:49</td>   <td>46121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMarkITPlacePage()[pri:1, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateMarkITPlacePage</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:32:53</td>   <td>50017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateManageTab()[pri:2, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateManageTab</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:33:04</td>   <td>60912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateInsightTab()[pri:3, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateInsightTab</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:33:08</td>   <td>65106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateNotificationPage()[pri:4, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateNotificationPage</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:33:31</td>   <td>88306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogo()[pri:5, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateLogo</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:33:35</td>   <td>91518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfile()[pri:6, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateMyProfile</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:33:57</td>   <td>113564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateEditProfile()[pri:7, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateEditProfile</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:34:21</td>   <td>138110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateChangePassword()[pri:8, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateChangePassword</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:34:42</td>   <td>159259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAccountSettings()[pri:9, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateAccountSettings</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:35:03</td>   <td>179744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCatalogRestriction()[pri:10, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateCatalogRestriction</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:35:21</td>   <td>198252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateDomainLink()[pri:11, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateDomainLink</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:35:40</td>   <td>217372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAddressPage()[pri:13, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateAddressPage</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:36:06</td>   <td>243461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateUsersPage()[pri:14, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateUsersPage</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:36:29</td>   <td>266457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRequestTab()[pri:15, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateRequestTab</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:36:32</td>   <td>268668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateInviteTab()[pri:16, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateInviteTab</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:36:34</td>   <td>270876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogout()[pri:17, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateLogout</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:36:39</td>   <td>275948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateForgetPswd()[pri:18, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateForgetPswd</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/15 13:36:48</td>   <td>285307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRegPage()[pri:19, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateRegPage</td> 
-  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:31:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateLogin</td> 
+  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/11/19 10:32:07</td>   <td>45143</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTest.ValidateSmokeTest@65466a6a]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1585635178</td>   <td></td> </tr>
 </table>
